common/common.scss
/* ... */
#reply-control .dropdown-select-box {
  height: auto;
}
#reply-control #edit-reason {
  background-color: color-chooser(rgba(0, 0, 0, 0.12), rgba(255, 255, 255, 0.12));
  border-bottom: 0;
  display: inline-block;
  font-size: 0.857143em;
  height: 19.999994px;
  margin: 0 0 0 4px;
  padding: 0 4px;
  width: auto;
}
#reply-control .grippie {
  -ms-flex-align: center;
      align-items: center;
  background-color: color-chooser(#ffffff, #424242);
  color: color-chooser(rgba(0, 0, 0, 0.54), rgba(255, 255, 255, 0.7));
  -ms-flex-negative: 0;
      flex-shrink: 0;
  height: 32px;
  -ms-flex-pack: center;
      justify-content: center;
  padding: 0;
}
@media (min-width: 1111px) {
  #reply-control .grippie {
    border-radius: 2px 2px 0 0;
  }
}
#reply-control .grippie::before {
  border: 0;
  content: 'drag_handle';
}
#reply-control .hide-preview #draft-status {
  right: 0;
}
#reply-control .hide-preview .toggle-preview::before {
  content: 'keyboard_arrow_left';
}
#reply-control .reply-area {
  height: 100%;
  margin: 0;
  padding: 0;
}
#reply-control .reply-area .ac-wrap {
  margin-right: 16px;
}
#reply-control #reply-title {
  margin: 0;
}
#reply-control .reply-to {
  color: color-chooser(rgba(0, 0, 0, 0.54), rgba(255, 255, 255, 0.7));
  margin: 0;
}
#reply-control .reply-to a {
  color: color-chooser(rgba(0, 0, 0, 0.54), rgba(255, 255, 255, 0.7));
}
#reply-control .reply-to .avatar {
  margin-right: 4px;
  margin-left: 4px;
}
#reply-control .reply-to .composer-action-title img.avatar {
  margin-right: 4px;
}
#reply-control .reply-to .composer-action-title .avatar {
  vertical-align: bottom;
}
#reply-control .reply-to .composer-action-title .d-icon,
#reply-control .reply-to .composer-action-title .user-link {
  margin-right: 0;
}
#reply-control .reply-to .composer-controls {
  position: absolute;
  top: 0;
  right: 16px;
}
#reply-control .reply-to .reply-details {
  max-width: calc(50% - 20px);
  position: absolute;
  top: 6.000003px;
  left: 16px;
}
#reply-control .reply-to .select-kit.composer-actions.dropdown-select-box .select-kit-header.is-focused {
  background-color: transparent;
}
#reply-control .save-or-cancel {
  width: calc(50% + 8px);
}
#reply-control .save-or-cancel #draft-status {
  color: $tertiary;
}
#reply-control .save-or-cancel #draft-status:empty {
  display: none;
}
#reply-control .submit-panel {
  -ms-flex-align: center;
      align-items: center;
  border-top: 1px solid color-chooser(rgba(255, 255, 255, 0.12), rgba(0, 0, 0, 0.12));
  display: -ms-flexbox;
  display: flex;
  margin-top: 0;
  padding: 16px 16px;
}
#reply-control .submit-panel .btn {
  margin-right: 0;
}
#reply-control .submit-panel .cancel {
  margin-left: 8px;
}
#reply-control .title-and-category {
  -ms-flex-wrap: nowrap;
      flex-wrap: nowrap;
  margin-top: 8px;
  margin-bottom: 8px;
  padding-right: 16px;
  padding-left: 16px;
}
#reply-control .title-input {
  -ms-flex-positive: 1;
      flex-grow: 1;
  -ms-flex-order: -1;
      order: -1;
}
#reply-control .toggle-preview {
  text-indent: 100%;
  width: 56px;
}
#reply-control .toggle-preview::before {
  -ms-flex-align: center;
      align-items: center;
  content: 'keyboard_arrow_right';
  display: -ms-flexbox;
  display: flex;
  -ms-flex-pack: center;
      justify-content: center;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  text-indent: 0;
}
#reply-control .toggle-toolbar,
#reply-control .toggler {
  -ms-flex-align: center;
      align-items: center;
  color: color-chooser(rgba(0, 0, 0, 0.54), rgba(255, 255, 255, 0.7));
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  height: 32px;
  -ms-flex-pack: center;
      justify-content: center;
  padding: 0;
  top: 0;
  width: 32px;
}
#reply-control .toggle-toolbar .fa,
#reply-control .toggler .fa {
  display: none;
}
#reply-control .toggle-toolbar {
  font-size: inherit !important;
  line-height: inherit !important;
}
#reply-control .toggle-toolbar::before {
  content: "menu";
}
#reply-control .toggler::before {
  content: 'close';
}
#reply-control .user-selector {
  margin-top: 8px;
  margin-bottom: 8px;
  padding-left: 16px;
}
#reply-control .user-selector .ac-wrap {
  background-color: transparent;
  border-top: 0;
  border-right: 0;
  border-left: 0;
  border-radius: 0;
  min-height: 36px;
  padding: 0 0;
}
#reply-control .user-selector .ac-wrap:focus, #reply-control .user-selector .ac-wrap:hover {
  border-width: 1px;
  box-shadow: inset 0 -2px 0 -1px color-chooser(rgba(255, 255, 255, 0.7), rgba(0, 0, 0, 0.42));
}
#reply-control .user-selector .ac-wrap input[type='text'] {
  margin-top: 8px;
  margin-bottom: 7px;
}
#reply-control .user-selector .ac-wrap .item {
  margin-top: 0;
  margin-bottom: 3px;
}
#reply-control .user-selector .add-warning {
  margin-bottom: 0;
}
#reply-control .wmd-controls .d-editor-preview {
  border: 0;
  border-left: 1px solid color-chooser(rgba(255, 255, 255, 0.12), rgba(0, 0, 0, 0.12));
}
#reply-control .wmd-controls .d-editor-preview img:not(.avatar):not(.emoji):not(.thumbnail) {
  height: auto;
  width: 100%;
}

.fps-result {
  -ms-flex-align: start;
      align-items: flex-start;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}
.fps-result .avatar {
  margin-right: 8px;
}
.fps-result .blurb {
  font-size: inherit;
  line-height: inherit;
  max-width: 100%;
}
.fps-result .search-category {
  margin-top: 8px;
  padding-top: 0;
  width: 100%;
}
.fps-result .topic {
  -ms-flex-align: center;
      align-items: center;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  margin-bottom: 8px;
  max-width: 100%;
  padding-bottom: 0;
}
.fps-result .topic input[type='checkbox'] {
  margin-right: 8px;
}

.fps-select {
  margin-top: -12px;
  margin-bottom: 24px;
}
.fps-select a {
  margin-right: 8px;
}

.search.row {
  margin-bottom: 0;
}
.search.row > input[type='text'] {
  margin-bottom: 24px;
  min-width: 50%;
}
/* ... */

